@@ -3,6 +3,8 @@ CHANGES IN VERSION 1.12.0
 
 NEW FEATURES
 
+    o `PackageStatus` now indicates whether a package is slated for
+      'Deprecation' by checking the `meat-index.dcf` file.
     o `pkgDownloadStats` provides the download statistics table for a
       particular package.
 
